fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ body::-webkit-scrollbar-corner,
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .win-state img {
@@ -93,6 +94,10 @@ body::-webkit-scrollbar-corner,
   height: 475px;
   opacity: 0;
   padding-top: 10px;
+}
+
+.win-state::-webkit-scrollbar {
+  width: 0;
 }
 
 @keyframes reveal {
@@ -105,7 +110,7 @@ body::-webkit-scrollbar-corner,
   width: 300px;
   height: 80px;
   border-radius: 20px;
-  margin-top: 25px;
+  margin: 25px 0;
 
   font-size: 30px;
   text-shadow: 0 0 15px black;
